feat: implement standalone agent loop using Gemini 2.5 Flash and remove OpenCode dependency

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "dev": "bun run ./bin/qa-test.ts"
     },
     "dependencies": {
-        "@opencode-ai/sdk": "latest",
+        "@google/generative-ai": "^0.21.0",
+        "@modelcontextprotocol/sdk": "^1.0.4",
+        "dotenv": "^16.4.7",
         "picocolors": "^1.0.0"
     },
     "devDependencies": {
